--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -36,11 +36,13 @@
                         <a class="nav-link disabled">Отключенная</a>
                     </li>
                 </ul>
+                <a href="/reg" class="btn btn-success" style="margin-right: 10px" >Регистрация</a>
                 <a href="/login" class="btn btn-success">Войти</a>
             </div>
         </div>
     </nav>
     {{{body}}}
+    <!--script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"></script-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
