--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/all.min.css" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -34,6 +35,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link disabled">Отключенная</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/addArticle">Новая статья</a>
                     </li>
                 </ul>
                 <a href="/reg" class="btn btn-success" style="margin-right: 10px" >Регистрация</a>
